# finance_uv

./: Notebook_test.ipynb  main.py  pyproject.toml  tutoriel_arcticdb.ipynb
.ipynb_checkpoints/: Notebook_test-checkpoint.ipynb
