[project]
name = "finance-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arcticdb>=6.9.0",
    "duckdb>=1.4.4",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "yfinance>=0.2.52,<0.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
